Using different package for image manipulation Added cropping of image

--- a/app/client/styles/style.less
+++ b/app/client/styles/style.less
@@ -2,11 +2,12 @@
 @import "packages/bootstrap-less-3/lib/less/bootstrap.lessimport";
 
 body {
-    margin-top: 50px;
+    margin-top: 60px;
 }
 
-#photo {
-    display: none;
+.image-container {
+    padding: 10px;
+    display: inline-block;
 }
 
 .my-navbar-brand {
@@ -16,9 +17,11 @@ body {
     font-size: 18px;
 }
 
+/*
 .my-image {
     max-height: 200px;
     max-width: 200px;
     //height: 200px;
     //width: 200px;
 }
+*/
