added in owl-carousel

--- a/app/client/styles/style.less
+++ b/app/client/styles/style.less
@@ -7,7 +7,8 @@ body {
 
 .image-container {
     padding: 10px;
-    display: inline-block;
+    //max-width: 70%;
+    //display: inline-block;
 }
 
 .my-navbar-brand {
@@ -17,11 +18,12 @@ body {
     font-size: 18px;
 }
 
-/*
+
 .my-image {
-    max-height: 200px;
-    max-width: 200px;
+    max-width: 100%;
+    //max-height: 100%;
+    //width: 300px;
     //height: 200px;
     //width: 200px;
 }
-*/
+
