have working with blaze

--- a/app/client/styles/style.less
+++ b/app/client/styles/style.less
@@ -1,13 +1,15 @@
 
-@import "packages/bootstrap-less-3/lib/less/bootstrap.lessimport";
+@import "/packages/bootstrap3-less/bootstrap.import.less";
 
 html {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
+  height: 100%;
 }
 
 body {
-    xmargin-top: 36px;
+    //margin-top: 36px;
     background-color: @navbar-inverse-bg;
+    height: 100%;
 }
 
 .hide {
